@@ -4,6 +4,7 @@ import br.ifsp.demo.annotation.*;
 import br.ifsp.demo.domain.exception.EntityNotFoundException;
 import br.ifsp.demo.domain.exception.InvalidArgumentException;
 import br.ifsp.demo.domain.model.Customer;
+import br.ifsp.demo.domain.model.GuaranteeType;
 import br.ifsp.demo.domain.model.ProgressivePrices;
 import br.ifsp.demo.domain.model.Tool;
 import br.ifsp.demo.domain.model.ToolStatus;
@@ -77,7 +78,7 @@ class RegisterRentalTest {
         when(toolRepository.findById("tool-1")).thenReturn(tool);
 
         String rentalId = registerRental.execute(
-                "customer-1", List.of("tool-1"), TODAY, "CASH_DEPOSIT", BigDecimal.TEN, null
+                "customer-1", List.of("tool-1"), TODAY, GuaranteeType.CASH_DEPOSIT
         );
 
         assertThat(rentalId).isNotNull();
@@ -116,9 +117,7 @@ class RegisterRentalTest {
                 "customer-1",
                 List.of("tool-1", "tool-2"),
                 TODAY,
-                "CASH_DEPOSIT",
-                BigDecimal.TEN,
-                null
+                GuaranteeType.CASH_DEPOSIT
         );
 
         assertThat(rentalId).isNotNull();
@@ -146,16 +145,16 @@ class RegisterRentalTest {
         @DisplayName("Should throw invalid date Exception  when start date is not today")
         void shouldThrowInvalidDateExceptionWhenStartDateIsNotToday(LocalDate invalidDate) {
             assertThatThrownBy(() -> registerRental.execute(
-                    "customer-1", List.of("tool-1"), invalidDate, "CASH_DEPOSIT", BigDecimal.TEN, null))
+                    "customer-1", List.of("tool-1"), invalidDate, GuaranteeType.CASH_DEPOSIT))
                     .isInstanceOf(InvalidDateException.class);
         }
 
         static Stream<Arguments> nullInputsProvider(){
             return Stream.of(
-                    Arguments.of(null, List.of("tool-1"), TODAY, "CASH_DEPOSIT", BigDecimal.TEN, null), //#42 null customerid
-                    Arguments.of("customer-1", Arrays.asList((String) null), TODAY, "CASH_DEPOSIT", BigDecimal.TEN, null), //#44 null toolId
-                    Arguments.of("customer-1", Arrays.asList(("tool-1"), null), TODAY, "CASH_DEPOSIT", BigDecimal.TEN, null), // #64 null toolId in multi-tool
-                    Arguments.of("customer-1", List.of("tool-1"), null, "CASH_DEPOSIT", BigDecimal.TEN, null) //#67 null start date
+                    Arguments.of(null, List.of("tool-1"), TODAY, GuaranteeType.CASH_DEPOSIT), //#42 null customerid
+                    Arguments.of("customer-1", Arrays.asList((String) null), TODAY, GuaranteeType.CASH_DEPOSIT), //#44 null toolId
+                    Arguments.of("customer-1", Arrays.asList(("tool-1"), null), TODAY, GuaranteeType.CASH_DEPOSIT), // #64 null toolId in multi-tool
+                    Arguments.of("customer-1", List.of("tool-1"), null, GuaranteeType.CASH_DEPOSIT) //#67 null start date
             );
         }
 
@@ -166,21 +165,21 @@ class RegisterRentalTest {
         @DisplayName("Should throw NullPointerException when required field is null")
         void shouldThrowNullPointerExceptionWhenRequiredFieldIsNull(
                 String customerId, List<String> toolIds, LocalDate startDate,
-                String guaranteeType, BigDecimal depositValue, String documentNumber
+                GuaranteeType guaranteeType
         ) {
             assertThatThrownBy(() -> registerRental.execute(
-                    customerId, toolIds, startDate, guaranteeType, depositValue, documentNumber))
+                    customerId, toolIds, startDate, guaranteeType))
                     .isInstanceOf(NullPointerException.class);
         }
 
         static Stream<Arguments> blankInputsProvider(){
             return Stream.of(
-                    Arguments.of("", List.of("tool-1"), TODAY, "CASH_DEPOSIT", BigDecimal.TEN, null), //#43 blank customer id
-                    Arguments.of("    ", List.of("tool-1"), TODAY, "CASH_DEPOSIT", BigDecimal.TEN, null), // #43 whitespace customerid
-                    Arguments.of("customer-1", Arrays.asList(""), TODAY, "CASH_DEPOSIT", BigDecimal.TEN, null), // #45 blank toolId
-                    Arguments.of("customer-1", Arrays.asList("  "), TODAY, "CASH_DEPOSIT", BigDecimal.TEN, null), //# 63 white space tool id
-                    Arguments.of("customer-1", List.of(), TODAY, "CASH_DEPOSIT", BigDecimal.TEN, null),
-                    Arguments.of("customer-1", Arrays.asList("tool-1", ""), TODAY, "CASH_DEPOSIT", BigDecimal.TEN, null) //#65 blank  toolId in multi-tool
+                    Arguments.of("", List.of("tool-1"), TODAY, GuaranteeType.CASH_DEPOSIT), //#43 blank customer id
+                    Arguments.of("    ", List.of("tool-1"), TODAY, GuaranteeType.CASH_DEPOSIT), // #43 whitespace customerid
+                    Arguments.of("customer-1", Arrays.asList(""), TODAY, GuaranteeType.CASH_DEPOSIT), // #45 blank toolId
+                    Arguments.of("customer-1", Arrays.asList("  "), TODAY, GuaranteeType.CASH_DEPOSIT), //# 63 white space tool id
+                    Arguments.of("customer-1", List.of(), TODAY, GuaranteeType.CASH_DEPOSIT),
+                    Arguments.of("customer-1", Arrays.asList("tool-1", ""), TODAY, GuaranteeType.CASH_DEPOSIT) //#65 blank  toolId in multi-tool
                     );
         }
 
@@ -191,10 +190,10 @@ class RegisterRentalTest {
         @DisplayName("Should throw InvalidArgumentException when required field is blank")
         void shouldThrowInvalidArgumentExceptionWhenRequiredFieldIsBlank(
                 String customerId, List<String> toolIds, LocalDate startDate,
-                String guaranteeType, BigDecimal depositValue, String documentNumber
+                GuaranteeType guaranteeType
         ){
             assertThatThrownBy(() -> registerRental.execute(
-                    customerId, toolIds, startDate, guaranteeType, depositValue, documentNumber))
+                    customerId, toolIds, startDate, guaranteeType))
                     .isInstanceOf(InvalidArgumentException.class);
 
         }
@@ -205,7 +204,7 @@ class RegisterRentalTest {
         @DisplayName("Should throw InvalidArgumentException when toolIds list contains duplicates")
         void shouldThrowInvalidArgumentExceptionWhenToolIdsContainsDuplicates() {
             assertThatThrownBy(() -> registerRental.execute(
-                    "customer-1", Arrays.asList("tool-1", "tool-1"), TODAY, "CASH_DEPOSIT", BigDecimal.TEN, null)).isInstanceOf(InvalidArgumentException.class);
+                    "customer-1", Arrays.asList("tool-1", "tool-1"), TODAY, GuaranteeType.CASH_DEPOSIT)).isInstanceOf(InvalidArgumentException.class);
         }
 
     }
@@ -221,7 +220,7 @@ class RegisterRentalTest {
         void shouldThrowEntityNotFoundExceptionWhenCustomerDoesNotExist() {
             when(customerRepository.findById("customer-1")).thenReturn(null);
             assertThatThrownBy(() -> registerRental.execute(
-                    "customer-1", List.of("tool-1"), TODAY, "CASH_DEPOSIT", BigDecimal.TEN, null))
+                    "customer-1", List.of("tool-1"), TODAY, GuaranteeType.CASH_DEPOSIT))
                     .isInstanceOf(EntityNotFoundException.class);
         }
 
@@ -234,7 +233,7 @@ class RegisterRentalTest {
             when(toolRepository.findById("tool-1")).thenReturn(null);
 
             assertThatThrownBy(() -> registerRental.execute(
-                    "customer-1", List.of("tool-1"), TODAY, "CASH_DEPOSIT", BigDecimal.TEN, null))
+                    "customer-1", List.of("tool-1"), TODAY, GuaranteeType.CASH_DEPOSIT))
                     .isInstanceOf(EntityNotFoundException.class);
         }
 
@@ -249,7 +248,7 @@ class RegisterRentalTest {
             when(toolRepository.findById("tool-1")).thenReturn(tool);
 
             assertThatThrownBy(() -> registerRental.execute(
-                    "customer-1", List.of("tool-1"), TODAY, "CASH_DEPOSIT", BigDecimal.TEN, null))
+                    "customer-1", List.of("tool-1"), TODAY, GuaranteeType.CASH_DEPOSIT))
                     .isInstanceOf(ToolUnavailableException.class);
         }
 
@@ -268,7 +267,7 @@ class RegisterRentalTest {
             when(toolRepository.findById("tool-2")).thenReturn(tool2);
 
             assertThatThrownBy(() -> registerRental.execute(
-                    "customer-1", List.of("tool-1", "tool-2"), TODAY, "CASH_DEPOSIT", BigDecimal.TEN, null
+                    "customer-1", List.of("tool-1", "tool-2"), TODAY, GuaranteeType.CASH_DEPOSIT
             ))
                     .isInstanceOf(ToolUnavailableException.class);
 
@@ -282,20 +281,10 @@ class RegisterRentalTest {
         void shouldThrowMissingGuaranteeExceptionWhenGuaranteeIsNotProvided() {
 
             assertThatThrownBy(() -> registerRental.execute(
-                    "customer-1", List.of("tool-1"), TODAY, null, null, null
+                    "customer-1", List.of("tool-1"), TODAY, null
             ))
                     .isInstanceOf(MissingGuaranteeException.class);
         }
 
-        @ParameterizedTest
-        @MethodSource("blankGuaranteeTypeProvider")
-        @UnitTest
-        @Functional
-        @DisplayName("Should throw exception when guaranteeType is blank")
-        void shouldThrowExceptionWhenGuaranteeTypeIsBlank(String guaranteeType) {
-            assertThatThrownBy(() -> registerRental.execute(
-                    "customer-1", List.of("tool-1"), TODAY, guaranteeType, BigDecimal.TEN, null)).isInstanceOf(MissingGuaranteeException.class);
-        }
-        static Stream<String> blankGuaranteeTypeProvider() {return Stream.of("", "  ");}
     }
 }
